--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -30,7 +30,7 @@
         <!-- Entry bib key -->
         <div id="{{entry.key}}" class="col-sm-8">
         <!-- Title -->
-        <div class="title">{{entry.title}}</div>
+        <a href="{{entry.url}}"><div class="title">{{entry.title}}</div></a>
         <!-- Author -->
         <div class="author">
         {% assign author_array_size = entry.author_array | size %}
